# src/main/java/com/company/services_reservas_app/transportlayers/impl/http/ClienteApiImpl.java
@@ -2,7 +2,7 @@ package com.company.services_reservas_app.transportlayers.impl.http;
 
 import com.company.services_reservas_app.entities.Cliente;
 import com.company.services_reservas_app.interactors.ClienteUseCase;
-import com.company.services_reservas_app.transportlayers.openapi.api.SistemaDeReservaApi;
+import com.company.services_reservas_app.transportlayers.openapi.api.CreateClientApi;
 import com.company.services_reservas_app.transportlayers.openapi.model.ClienteRequest;
 import com.company.services_reservas_app.mapper.ClienteMapper;
 import com.company.services_reservas_app.transportlayers.openapi.model.ClienteResponse;
@@ -14,25 +14,20 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/api")
-public class ClienteApiImpl implements SistemaDeReservaApi {
+public class ClienteApiImpl implements CreateClientApi {
     @Autowired(required = true)
     private final ClienteUseCase clienteUseCase;
 
-
-    //iniciando a classe
     public ClienteApiImpl(ClienteUseCase clienteUseCase){
         this.clienteUseCase = clienteUseCase;
     }
-    //endpoint de criação de um cliente
-    @PostMapping
-    public ResponseEntity<ClienteResponse> cadastrarCliente(ClienteRequest clienteRequest){
-        //Mapeia o objeto ClienteReuqest para o obj cliente usando o mapper
+
+    @Override
+    public ResponseEntity<ClienteResponse> addClient(ClienteRequest clienteRequest) {
         Cliente cliente = ClienteMapper.INSTANCE.map(clienteRequest);
-        //executa a regra de negocio dentro do UseCase
-        clienteUseCase.execute(cliente);
-        //mapeia a resposta do cliente para o obj ClienteResponse, preenchendo os campos necessarios
-       ClienteResponse clienteResponse = ClienteMapper.INSTANCE.mapResponse("Nome", "Telefone", "Email", "CPF", "dataNascimento", "sexo", cliente.getEndereco());
-        //retorna a resposta do cliente dentro de um response entity com status http 200 de OK
+        //clienteUseCase.execute(cliente);
+        ClienteResponse clienteResponse = ClienteMapper.INSTANCE.mapResponse("Nome", "Telefone", "Email", "CPF", "dataNascimento", "sexo");
         return ResponseEntity.ok(clienteResponse);
     }
+
 }
